# api-content

./: pyproject.toml
app/: main.py
app/ai/: chunking.py  pipeline.py
app/api/: conteudos.py
app/db/: __init__.py  session.py
app/models/: conteudo.py  conteudo_chunk.py
app/schemas/: conteudo.py
app/services/: conteudo_service.py  embedding_service.py
